--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,13 +18,23 @@
         android:layout_marginTop="80dp"/>
 
     <Button
+        android:id="@+id/checck_btn"
         android:onClick="check_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/text_View"
         android:layout_centerHorizontal="true"
-        android:text="Check"
-        android:layout_marginTop="300dp"/>
+        android:text="Check Device"
+        android:layout_marginTop="100dp"/>
+
+    <TextView
+        android:id="@+id/check_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/checck_btn"
+        android:layout_marginTop="100dp"
+        android:layout_centerHorizontal="true"
+        />
 
 
 </RelativeLayout>
